# femtobot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/femtobot/: __init__.py  femtobot.py
src/femtobot/agents/: commands.py  interrupt.py  nodes.py  state.py
src/femtobot/cli/: cli.py
src/femtobot/providers/: chatmodel.py
src/femtobot/templates/: agent.py
src/femtobot/tools/: builtin.py
tools/: plot_graph.py  run_agent_loop.py
