[project]
name = "femtobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Leo", email = "liaofeng0203@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "langchain>=1.2.17",
  "langchain-deepseek>=1.0.1",
  "langgraph>=1.1.10",
  "loguru>=0.7.3",
  "prompt-toolkit>=3.0.52",
  "rich>=15.0.0",
  "socksio>=1.0.0",
  "tavily-python>=0.7.24",
  "typer>=0.25.1",
]

[project.scripts]
femtobot = "femtobot.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.3"]
